force-app/main/default/objects/CJFW_TaxWorkAdjustment__c/CJFW_TaxWorkAdjustment__c.object-meta.xml
<CustomObject>
    <description>[P2] 매출채권 - 세무조정</description>
    <label>세무조정</label>
    <nameField>
        <displayFormat>TWA{YYYYMMDD}{0000}</displayFormat>
        <label>Tax Work Adjustment No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>