force-app/main/default/objects/CJFW_TaxWorkAdjustment__c/fields/AdjustmentDate__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentDate__c</fullName>
    <label>Adjustment Date</label>
    <type>Date</type>
</CustomField>