force-app/main/default/objects/CJFW_TaxWorkAdjustment__c/fields/AdjustmentNonTaxableAmount__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentNonTaxableAmount__c</fullName>
    <label>Adjustment Non-Taxable Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>