force-app/main/default/objects/CJFW_TaxWorkAdjustment__c/fields/AdjustmentTaxableAmount__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentTaxableAmount__c</fullName>
    <label>Adjustment Taxable Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>