force-app/main/default/objects/CJFW_TaxWorkAdjustment__c/fields/BeforeNonTaxableAmount__c.field-meta.xml
<CustomField>
    <fullName>BeforeNonTaxableAmount__c</fullName>
    <label>Before Non-Taxable Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>