force-app/main/default/objects/CJFW_TaxWorkAdjustment__c/fields/BeforeTaxableAmount__c.field-meta.xml
<CustomField>
    <fullName>BeforeTaxableAmount__c</fullName>
    <label>Before Taxable Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>