force-app/main/default/objects/CJFW_TaxWorkAdjustment__c/fields/FM_AdjustmentTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>FM_AdjustmentTotalAmount__c</fullName>
    <formula>AdjustmentTaxableAmount__c +  AdjustmentNonTaxableAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjustment Total Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>