force-app/main/default/objects/CJFW_TaxWorkAdjustment__c/fields/FM_BeforeTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>FM_BeforeTotalAmount__c</fullName>
    <formula>BeforeTaxableAmount__c +  BeforeNonTaxableAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Before Total Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>