force-app/main/default/objects/CJFW_TaxWorkAdjustment__c/fields/FM_SU__c.field-meta.xml
<CustomField>
    <fullName>FM_SU__c</fullName>
    <formula>SoldTo__r.Owner.SULabel__c</formula>
    <label>SU</label>
    <type>Text</type>
</CustomField>