force-app/main/default/objects/CJFW_TaxWorkAdjustment__c/fields/PricingDate__c.field-meta.xml
<CustomField>
    <fullName>PricingDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Pricing Date</label>
    <type>Date</type>
</CustomField>