force-app/main/default/objects/CJFW_TaxWorkAdjustment__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>사업자 등록번호 변경</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>매출마감 차액 조정</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>클레임 발생 조정</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>고객요청 마감금액 이월</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>매출이관</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>매출누락</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>기타조정(재무)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>