force-app/main/default/objects/CJFW_TaxWorkAdjustment__c/fields/ShipTo__c.field-meta.xml
<CustomField>
    <fullName>ShipTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tax Work Adjustment (Ship To)</relationshipLabel>
    <relationshipName>Tax_Work_Adjustment1</relationshipName>
    <type>Lookup</type>
</CustomField>