force-app/main/default/objects/CJFW_TaxWorkAdjustment__c/fields/SoldTo__c.field-meta.xml
<CustomField>
    <fullName>SoldTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tax Work Adjustment</relationshipLabel>
    <relationshipName>Tax_Work_Adjustment</relationshipName>
    <type>Lookup</type>
</CustomField>