force-app/main/default/objects/CJFW_TaxWorkAdjustment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>당월계산서 금액조정(+)</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>당월계산서 금액조정(-)</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>당월계산서 이월조정(+)</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>당월계산서 이월조정(-)</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>당월 사업자 변경 조정(+)</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>당월 사업자 변경 조정(-)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>