force-app/main/default/objects/CJFW_TaxWorkAdjustment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FM_CodeSoldTo__c</columns>
    <columns>FM_CodeShipTo__c</columns>
    <columns>FM_AdjustmentPeriod__c</columns>
    <columns>BillingDate__c</columns>
    <columns>PricingDate__c</columns>
    <columns>FM_BeforeTotalAmount__c</columns>
    <columns>FM_AdjustmentTotalAmount__c</columns>
    <columns>ApprovalStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>